# ft_IRC

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.json  default.nix  flake.nix  run.py  shell.nix
.github/workflows/: ci.yml
certs/: domain.crt  domain.key
client/: CMakeLists.txt
client/src/: main.cpp
configs/: config_1.json  config_2.json  config_3.json
server/: CMakeLists.txt
server/include/: Channel.h  ChannelDatabase.h  Client.h  ClientDatabase.h  Config.h.in  IChannel.h  IChannelDatabase.h  IClient.h  IClientDatabase.h  ILocalServer.h  ILocalUser.h  IMessage.h  IMessageDispatcher.h  IRCMessage.h  IRCServer.h  IRemoteUser.h  IServer.h  IServerConfig.h  IUser.h  LocalServer.h  LocalUser.h  LogSettings.h  Message.h  MessageDispatcher.h  RegisterUser.h  RemoteServer.h  RemoteUser.h  Server.h  ServerConfig.h  ServerData.h  User.h  message.hpp  parser.hpp
server/include/MessageHandlers/: CONNECTHandler.h  CommandHandler.h  ERRORHandler.h  ICommandHandler.h  JOINHandler.h  KILLHandler.h  MODEHandler.h  NAMESHandler.h  NICKHandler.h  NJOINHandler.h  NOTICEHandler.h  NUMERICHandler.h  OPERHandler.h  PARTHandler.h  PASSHandler.h  PINGHandler.h  PONGHandler.h  PRIVMSGHandler.h  PingPongHandler.h  QUITHandler.h  SERVERHandler.h  SQUITHandler.h  TOPICHandler.h  USERHandler.h  VERSIONHandler.h
server/src/: Channel.cpp  ChannelDatabase.cpp  Client.cpp  ClientDatabase.cpp  IRCServer.cpp  LocalServer.cpp  Message.cpp  MessageDispatcher.cpp  RegisterUser.cpp  RemoteServer.cpp  RemoteUser.cpp  Server.cpp  ServerConfig.cpp  User.cpp  main.cpp  message.cpp  parser.cpp
server/src/MessageHandlers/: CONNECTHandler.cpp  CommandHandler.cpp  ERRORHandler.cpp  JOINHandler.cpp  KILLHandler.cpp  MODEHandler.cpp  NAMESHandler.cpp  NICKHandler.cpp  NJOINHandler.cpp  NOTICEHandler.cpp  NUMERICHandler.cpp  OPERHandler.cpp  PARTHandler.cpp  PASSHandler.cpp  PINGHandler.cpp  PONGHandler.cpp  PRIVMSGHandler.cpp  PingPongHandler.cpp  QUITHandler.cpp  SERVERHandler.cpp  SQUITHandler.cpp  TOPICHandler.cpp  USERHandler.cpp  VERSIONHandler.cpp
server/tests/: CMakeLists.txt  ChannelDatabase_test.cpp  ClientDatabase_test.cpp  ClientUpgrade_test.cpp  Client_test.cpp  LocalServer_test.cpp  MockClient.h  MockClientDatabase.h  MockMessage.h  MockServer.h  MockUser.h  NICKHandler_test.cpp  PASSHandler_test.cpp  RemoteUser_test.cpp  Server_test.cpp  USERHandler_test.cpp  User_test.cpp  test_init.cpp
server/tests/HandlerTests/: JOINHandler_test.cpp  KILLHandler_test.cpp  MODEHandler_test.cpp  NAMESHandler_test.cpp  NICKHandler_test.cpp  NJOINHandler_test.cpp  PASSHandler_test.cpp  PRIVMSGHandler_test.cpp  QUITHandler_test.cpp  SERVERHandler_test.cpp  USERHandler_test.cpp
server/tests/Mocks/: MockChannel.h  MockChannelDatabase.h  MockClient.h  MockClientDatabase.h  MockIOHandler.h  MockLocalUser.h  MockMessage.h  MockServer.h  MockServerConfig.h  MockUser.h
shared_lib/: CMakeLists.txt
shared_lib/include/: AddressInfo.h  CircularBuffer.h  Coparser.h  IIOHandler.h  IOController.h  ISocket.h  Logger.h  Message.h  Mutex.h  Mutex.hpp  Numerics.h  Parser.h  Parser.hpp  RawMessage.h  RawMessage.hpp  SSL.h  Socket.h  TCPIOHandler.h  TimeStampManager.h  TimeStamps.h  UUID.h  UUID.hpp  Utilities.h
shared_lib/src/: AddressInfo.cpp  CircularBuffer.cpp  ErrorReply.cpp  IOController.cpp  Logger.cpp  Message.cpp  Parser.cpp  RawMessage.cpp  SSL.cpp  Socket.cpp  TCPIOHandler.cpp  TimeStampManager.cpp  TimeStamps.cpp
shared_lib/tests/: CMakeLists.txt  IOController_test.cpp  Mutex_test.cpp  TCPIOHandler_test.cpp  TimeStampManager_test.cpp
shared_lib/tests/Mocks/: MockSocket.h
tcp_boost/: CMakeLists.txt
tcp_boost/include/: Resolver.h
tcp_boost/src/: Resolver.cpp
tcp_lib/: CMakeLists.txt
tcp_lib/include/: AddressInfo.h  IOController.h  Message.h  Resolver.h  Socket.h
tcp_lib/src/: AddressInfo.cpp  IOController.cpp  Message.cpp  Resolver.cpp  Socket.cpp
tcp_lib/tests/: CMakeLists.txt  IOController_test.cpp  test_tcp_lib.cpp
